# token-counter

./: .gitignore  LICENSE  README.md  pyproject.toml
src/token_counter/: __init__.py  cli.py  main.py
tests/: test_main.py
