[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "token-counter"
version = "0.1.0"
description = "Token counting CLI for multiple LLM tokenizers (OpenAI, Anthropic, open-source)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Nripanka Das"}]
dependencies = [
    "click>=8.0",
    "tiktoken>=0.5.0",
    "rich>=13.0",
]

[project.scripts]
token-counter = "token_counter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
